# cantrip

./: .env.example  .gitignore  BIBLIOGRAPHY.md  NEXT_SESSION.md  PARITY.md  README.md  SPEC.md  SPEC_RLM.md  TESTING.md  apple-codeact-llm-agents.md  browser-is-the-sandbox.md  deepfates-recursive-language-models.md  dont-outsource-your-thinking.md  let-the-model-write-the-prompt.md  package.json  scratch.md  state-of-rl-environments.md  tests.yaml  tsconfig.json  unrolling-codex-agent-loop.md  why-simulator-ais-want-active-inference.md  zhang-rlm-vs-agents-distinction.md
py/: .env.example  .gitignore  PATTERNS.md  README.md  SPEC.md  pyproject.toml  tests.yaml
py/cantrip/: __init__.py  _utils.py  acp_sdk.py  acp_server.py  acp_stdio.py  adapters.py  browser.py  builders.py  cli.py  cli_runner.py  code_runner.py  core.py  entity.py  env.py  errors.py  executor.py  http_router.py  loom.py  mediums.py  models.py  runtime.py
py/docs/: CAPSTONE_INTERACTIVE.md  DEFINITION_OF_COMPLETE.md  IMPLEMENTATION_TRACKER.md  MILESTONES.md  PATTERN_PROGRESSION.md  PROGRESS.md  README.md  REAL_CRYSTAL_TESTING.md  REAL_LLM_TESTING.md
py/examples/: __init__.py
py/scripts/: acp_debug_log_summary.py  acp_probe.py  capstone.py  run_all_tests.sh  run_completion_check.py  run_live_tests.sh  run_nonlive_tests.sh  run_patterns.sh  smoke_acp.sh  toad_acp_probe.py  watch_zed_real_log.sh
py/tests/: test_acp_server.py  test_acp_stdio.py  test_acp_stdio_main.py  test_browser_driver_interface.py  test_browser_medium_behavior.py  test_builders.py  test_capstone_cli_modes.py  test_cli_pipe.py  (+24 more)
(+916 files in other folders)
